Start React App

--- a/template/index.html
+++ b/template/index.html
@@ -10,6 +10,9 @@
         <div class="grid-container">
             <header class="header">
                 <div class="brand">
+                    <button onclick="openMenu()">
+                        &#9776;
+                    </button>
                     <a href="index.html">itsyours</a>
                 </div>
                 <div class="header-links">
@@ -17,21 +20,117 @@
                     <a href="signin.html">Sign In</a>
                 </div>
             </header>
-            <!-- <aside>
-            Shopping Categories
-        </aside> -->
-            <main class="main">
+            <aside class="sidebar" >
+                <h3>Shopping Categories</h3>
+                <button class="sidebar-close-button" onclick="closeMenu()">x</button>
                 <ul>
-                    <li>Product 1</li>
-                    <li>Product 2</li>
-                    <li>Product 3</li>
-                    <li>Product 4</li>
-                    <li>Product 5</li>
+                    <li>
+                        <a href="index.html">Pants</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Shirts</a>
+                    </li>
                 </ul>
+            </aside>
+            <main class="main">
+                <div class="content">
+                    <ul class="products">
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="product">
+                                <a href="product.html">
+                                    <img class="product-image" src="./images/d1.jpg" alt="product">
+                                </a>
+                                <div class="product-name">
+                                    <a href="product.html">Slim Shirt</a>
+                                </div>
+                                <div class="product-brand">Nike</div>
+                                <div class="product-price">$60</div>
+                                <div class="product-rating">4.5 Stars (10 Reviews)</div>
+                            </div>
+                        </li>
+                    </ul> 
+                </div>
+                
             </main>
             <footer class="footer">
-                All Rights Reserved
+                All Rights Reserved &copy;
             </footer>
         </div>
+        <script>
+            function openMenu() {
+                document.querySelector(".sidebar").classList.add("open");
+                document.querySelector(".sidebar").classList.remove("close");
+            }
+
+            function closeMenu() {
+                document.querySelector(".sidebar").classList.add("close");
+                document.querySelector(".sidebar").classList.remove("open");
+            }
+        </script>
     </body>
 </html>
