--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,12 +17,15 @@
 
   --fs-h1: 3rem;
   --fs-h2: 2rem;
-  --fs-h3: 1.5rem;
-  --fs-body: 1rem;
-  --fs-button: 1.3rem;
+  --fs-h3: 1.7rem;
+  --fs-body: 1.4rem;
+  --fs-button: 1.5rem;
 
   --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
       0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
+
+  --bs-2: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.25),
+      0.12em 0.12em 0.2em rgba(0, 0, 0, 0.15);
 }
 
 @media (min-width: 800px) {
@@ -30,7 +33,7 @@
       --fs-h1: 3rem;
       --fs-h2: 2.5rem;
       --fs-h3: 2rem;
-      --fs-body: 1.2rem;
+      --fs-body: 1.3rem;
       --fs-button: 1.6rem;
   }
 }
@@ -92,6 +95,8 @@ body {
 
 .main {
   grid-area: main;
+  padding: 0;
+  min-height: 85vh;
 }
 
 .footer {
@@ -113,6 +118,29 @@ a:hover {
   color: var(--clr-hover);
 }
 
+select {
+	font-weight: 700;
+	line-height: 1.3;
+	padding: .4em;
+	border: none;
+  border-radius: .5em;
+  margin-left: 1rem;
+  border: 1px rgba(0, 0, 0, 0.15) solid;
+}
+
+select:hover {
+	cursor: pointer;
+}
+
+select option {
+  background-color: var(--clr-accent);
+  color: var(--clr-light);
+}
+
+select option:hover {
+	background-color: var(--clr-hover);
+}
+
 /* Home Screen */
 
 .products {
@@ -120,6 +148,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .products li {
@@ -138,6 +167,10 @@ a:hover {
   height: 100%;
 }
 
+.product a {
+  text-align: center;
+}
+
 .product-name {
   font-size: var(--fs-h3);
   font-weight: var(--fw-bold);
@@ -154,13 +187,15 @@ a:hover {
 }
 
 .product-image {
+  margin: 0 auto;
   max-width: 34rem;
   max-height: 34rem;
   transition: 0.3s;
+  -webkit-filter: brightness(100%);
 }
 
 .product-image:hover {
-  opacity: 0.9;
+  -webkit-filter: brightness(97%);
 }
 
 .product-rating {
@@ -187,6 +222,7 @@ a:hover {
   background: var(--clr-dark);
   height: 100%;
   color: var(--clr-light);
+  z-index: 1000;
 }
 
 .sidebar.open {
@@ -250,6 +286,7 @@ a:hover {
   right: 1.5rem;
   top: 1.5rem;
   background-color: var(--clr-light);
+  transition: 0.3s;
 }
 
 .sidebar-close-button:hover {
@@ -268,11 +305,11 @@ a:hover {
 }
 
 .details-image {
-  flex: 2 1 60rem;
+  flex: 2 1 40rem;
 }
 
 .details-image img {
-  max-width: 50rem;
+  max-width: 40rem;
   max-height: 60%;
   border-radius: .5rem;
   box-shadow: var(--bs);
@@ -328,11 +365,22 @@ a:hover {
   text-decoration: underline;
 }
 
+@media (max-width: 600px) {
+  .details {
+    padding: 0;
+  }
+
+  .details-image img {
+    max-width: 100vw;
+  }
+}
+
 /* Cart */
 
 .cart {
   display: flex;
   flex-wrap: wrap;
+  gap: 1rem;
   margin: 1rem;
   align-items: flex-start;
 }
@@ -357,8 +405,9 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   border-bottom: .1rem var(--clr-gray) solid;
+  padding-bottom: 2rem;
 }
 
 .cart-list-container li img {
@@ -373,11 +422,17 @@ a:hover {
 }
 
 .cart-image {
-  flex: 1 1;
+  width: 10rem;
+  text-align: right;
+  margin-right: 2rem;
 }
 
 .cart-name {
   flex: 8 1;
+}
+
+.cart-name a {
+  font-weight: var(--fw-bold);
 }
 
 .cart-price {
