--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,11 +21,8 @@
   --fs-body: 1.4rem;
   --fs-button: 1.5rem;
 
-  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
-      0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
-
-  --bs-2: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.25),
-      0.12em 0.12em 0.2em rgba(0, 0, 0, 0.15);
+  --bs: 0.2em 0.2em 1.5em 0.3em rgba(0, 0, 0, 0.15),
+      0.125em 0.125em 1em 0.2em rgba(0, 0, 0, 0.25);
 }
 
 @media (min-width: 800px) {
@@ -157,7 +154,7 @@ select option:hover {
   flex: 0 1 34rem;
   margin: 1rem;
   height: 50rem;
-  border-bottom: .1rem var(--clr-light-accent) solid;
+  
 }
 
 .product {
@@ -165,10 +162,25 @@ select option:hover {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  border-radius: 6px;
+  transition: 0.3s;
+  border-bottom: .1rem var(--clr-light-accent) solid;
+}
+
+.product:hover {
+  box-shadow: var(--bs);
 }
 
 .product a {
   text-align: center;
+}
+
+.product-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding-left: 1.5rem;
 }
 
 .product-name {
@@ -190,12 +202,6 @@ select option:hover {
   margin: 0 auto;
   max-width: 34rem;
   max-height: 34rem;
-  transition: 0.3s;
-  -webkit-filter: brightness(100%);
-}
-
-.product-image:hover {
-  -webkit-filter: brightness(97%);
 }
 
 .product-rating {
